# eden

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  constants.py  database.py  ensemble.py  evaluator.py  main.py  pyproject.toml  test_prompts.py
econ-bench/: groves_clarke_public_good.py  mechanism_base.py  vickrey_auction.py
evolve-experiment/: README.md  analyze_run.py  constants.py  database.py  ensemble.py  evaluator.py  evolve_types.py  main.py  mutator.py  queue_simulator.py  run_optimal_simulation.py  test_prompts.py  test_simulator.py  utils.py  visualize.py
multi-agent-experiment/: main.py
run_4/: evolution_report.txt
run_5/: report.txt
