[project]
name = "eden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "emergent>=0.1.0",
    "langfuse>=3.10.3",
    "modal>=1.2.4",
    "openai>=2.7.1",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
]
