[project]
name = "eden"
version = "0.1.0"
description = "EDEN: Economic Design Engine - LLM-Driven Evolutionary Search for Optimal Economic Mechanism Design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "langfuse>=3.10.3",
    "openai>=2.7.1",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.2",
]
